--- a/front-end/src/components/routing/style.less
+++ b/front-end/src/components/routing/style.less
@@ -1,9 +1,9 @@
 @import '~style/helpers';
 
-.profile {
+.map {
 	padding: 56px 20px;
 	min-height: 100%;
 	width: 100%;
-	background: #EEE;
 }
-
+ 
+  
