--- a/front-end/src/components/styles/direction.less
+++ b/front-end/src/components/styles/direction.less
@@ -1,2 +1,16 @@
 @import '~style/helpers';
 
+.direction {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100vw;
+    background: #ffffff;
+    color: #000000;
+    .arrowText {
+        text-transform: uppercase;
+        font-weight: bold;
+        font-size: 2rem;
+        padding: 50px;
+    }
+}
