--- a/front-end/src/components/styles/home.less
+++ b/front-end/src/components/styles/home.less
@@ -1,13 +1,51 @@
 @import '~style/helpers';
 
 .home {
-	padding: 56px 20px;
-	min-height: 100%;
-	width: 100%;
-	select {
-		width:80%;
+	text-align: center;
+	button {
+		border: 2px solid #000000;
+		border-radius: 0;
+		background: none;
+		box-shadow: none;
+		padding: 15px;
+		width: 80%;
+		text-transform: uppercase;
+		font-size: 1.5rem;
+		&:hover {
+			background: #000000;
+			color: #ffffff;
+		}
 	}
-	input[type='checkbox'] {
-			float:left;
-		} 		
+
+	label, input, select {
+		padding: 15px;
+		display: block;
+		width: 80%;
+		margin: 0 auto;
+		&[type='text'] {
+			border: 1px solid #000000;
+		}
+	}
+
+	label {
+		font-size: 1.5rem;
+		text-transform: uppercase;
+		text-align: left;
+		padding-left: 0;
+	}
+
+	input[type='checkbox'] + label, input[type='checkbox'] {
+		display: inline-block;
+		width: auto;
+	}
+
+	input[type='checkbox'] + label {
+		margin-left: 25px;
+	}
+
+
+	.checkblock {
+		text-align: left;
+		margin-left: 10%;
+	}
 }
