--- a/front-end/src/index.ejs
+++ b/front-end/src/index.ejs
@@ -9,6 +9,8 @@
 	<% } %>
 	<meta charset="utf-8">
 	<title>Pitstop</title>
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" 
+		integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimal-ui">
 	<meta name="description" content="preact-boilerplate">
 	<meta name="msapplication-TileColor" content="#673ab8">
