--- a/front-end/src/components/styles/header.less
+++ b/front-end/src/components/styles/header.less
@@ -10,6 +10,7 @@
 	background: #2e90f2;
 	box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 	z-index: 50;
+	text-transform: uppercase;
 
 	h1 {
 		float: left;
