--- a/front-end/src/components/styles/home.less
+++ b/front-end/src/components/styles/home.less
@@ -49,3 +49,13 @@
 		margin-left: 10%;
 	}
 }
+
+.searchItem {
+	margin: 0 auto;
+	padding: 25px;
+	width: 80%;
+	&:hover {
+		background: #000000;
+		color: #ffffff;
+	}
+}
