--- a/front-end/src/components/styles/home.less
+++ b/front-end/src/components/styles/home.less
@@ -11,6 +11,7 @@
 		width: 80%;
 		text-transform: uppercase;
 		font-size: 1.5rem;
+		margin-top: 25px;
 		&:hover {
 			background: #000000;
 			color: #ffffff;
@@ -32,21 +33,6 @@
 		text-transform: uppercase;
 		text-align: left;
 		padding-left: 0;
-	}
-
-	input[type='checkbox'] + label, input[type='checkbox'] {
-		display: inline-block;
-		width: auto;
-	}
-
-	input[type='checkbox'] + label {
-		margin-left: 25px;
-	}
-
-
-	.checkblock {
-		text-align: left;
-		margin-left: 10%;
 	}
 }
 
