--- a/front-end/src/components/styles/direction.less
+++ b/front-end/src/components/styles/direction.less
@@ -5,9 +5,10 @@
     position: absolute;
     left: 0;
     bottom: 0;
-    width: 100vw;
+    width: 100%;
     background: #ffffff;
     color: #000000;
+    box-sizing: border-box;
     .arrowText {
         text-transform: uppercase;
         font-weight: bold;
