--- a/front-end/src/index.ejs
+++ b/front-end/src/index.ejs
@@ -12,13 +12,13 @@
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" 
 		integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimal-ui">
-	<meta name="description" content="preact-boilerplate">
+	<meta name="description" content="Walking app">
 	<meta name="msapplication-TileColor" content="#673ab8">
 	<meta name="msapplication-TileImage" content="./assets/icons/mstile-150x150.png">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-	<meta name="apple-mobile-web-app-title" content="preact-boilerplate">
-	<meta name="application-name" content="preact-boilerplate">
+	<meta name="apple-mobile-web-app-title" content="Walking app">
+	<meta name="application-name" content="Walking app">
 	<meta name="format-detection" content="telephone=no">
 	<meta name="theme-color" content="#673ab8">
 	<link rel="apple-touch-icon" sizes="180x180" href="./assets/icons/apple-touch-icon.png">
